Checkout horizontal scroll fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -588,6 +588,7 @@ footer img{
 }
 
 table{
+  width: 100%;
   border-radius: 1rem;
   background-color: white;
   box-shadow: 
@@ -667,7 +668,6 @@ input{
 .buttons-kassa{
   display: flex;
   gap: 2rem;
-  
 }
 
 /* ------------------------------- cart modal ------------------------------- */
